--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,6 @@
-streamlit
+streamlit>=1.28.0
+pandas>=2.0.0
+requests>=2.31.0
+google-cloud-bigquery>=3.13.0
+google-auth-oauthlib>=1.1.0
+google-auth>=2.25.0
